@@ -38,6 +38,8 @@ GeneralSettingsPage::GeneralSettingsPage(QWidget* parent, QApt::Config *aptConfi
         , m_aptConfig(aptConfig)
         , m_recommendsCheckBox(new QCheckBox(this))
         , m_undoStackSpinbox(new QSpinBox(this))
+        , m_autoCleanCheckBox(new QCheckBox(this))
+        , m_autoCleanSpinbox(new QSpinBox(this))
 {
     QVBoxLayout *layout = new QVBoxLayout(this);
     layout->setMargin(0);
@@ -46,6 +48,8 @@ GeneralSettingsPage::GeneralSettingsPage(QWidget* parent, QApt::Config *aptConfi
 
     m_recommendsCheckBox->setText(i18n("Treat recommended packages as dependencies"));
 
+    // TODO: 1.1 Blocker: use proper form alignment as per KDE HIG
+    // Undo settings
     QWidget *undoSizeWidget = new QWidget(this);
 
     QHBoxLayout *undoSizeLayout = new QHBoxLayout(undoSizeWidget);
@@ -61,17 +65,42 @@ GeneralSettingsPage::GeneralSettingsPage(QWidget* parent, QApt::Config *aptConfi
     undoSizeLayout->addWidget(m_undoStackSpinbox);
     undoSizeLayout->addWidget(undoSizeWidgetSpacer);
 
+    // Autoclean settings
+
+    QWidget *autoCleanWidget = new QWidget(this);
+
+    QHBoxLayout *autoCleanLayout = new QHBoxLayout(autoCleanWidget);
+    autoCleanLayout->setMargin(0);
+    autoCleanWidget->setLayout(autoCleanLayout);
+
+    m_autoCleanCheckBox->setText(i18n("Delete obsolete cached packages every:"));
+    m_autoCleanSpinbox->setMinimum(1);
+
+    QWidget *autoCleanWidgetSpacer = new QWidget(autoCleanWidget);
+    autoCleanWidgetSpacer->setSizePolicy(QSizePolicy::Expanding, QSizePolicy::Preferred);
+
+    autoCleanLayout->addWidget(m_autoCleanCheckBox);
+    autoCleanLayout->addWidget(m_autoCleanSpinbox);
+    autoCleanLayout->addWidget(autoCleanWidgetSpacer);
+
     QWidget *spacer = new QWidget(this);
     spacer->setSizePolicy(QSizePolicy::Preferred, QSizePolicy::Expanding);
 
     layout->addWidget(m_recommendsCheckBox);
     layout->addWidget(undoSizeWidget);
+    layout->addWidget(autoCleanWidget);
     layout->addWidget(spacer);
 
     connect(m_recommendsCheckBox, SIGNAL(clicked()), this, SIGNAL(changed()));
     connect(m_undoStackSpinbox, SIGNAL(valueChanged(int)), this, SIGNAL(changed()));
+    connect(m_autoCleanCheckBox, SIGNAL(clicked()), this, SIGNAL(changed()));
+    connect(m_autoCleanSpinbox, SIGNAL(valueChanged(int)), this, SIGNAL(changed()));
+
+    connect(m_autoCleanSpinbox, SIGNAL(valueChanged(int)),
+            this, SLOT(updateAutoCleanSpinboxSuffix()));
 
     loadSettings();
+    updateAutoCleanSpinboxSuffix();
 }
 
 GeneralSettingsPage::~GeneralSettingsPage()
@@ -84,6 +113,10 @@ void GeneralSettingsPage::loadSettings()
 
     m_recommendsCheckBox->setChecked(m_aptConfig->readEntry("APT::Install-Recommends", true));
     m_undoStackSpinbox->setValue(settings->undoStackSize());
+
+    int autoCleanValue = m_aptConfig->readEntry("APT::Periodic::AutocleanInterval", 0);
+    m_autoCleanCheckBox->setChecked(autoCleanValue > 0);
+    m_autoCleanSpinbox->setValue(autoCleanValue);
 }
 
 void GeneralSettingsPage::applySettings()
@@ -98,11 +131,28 @@ void GeneralSettingsPage::applySettings()
         // TODO: Change apply button icon to the auth key.
         m_aptConfig->writeEntry("APT::Install-Recommends", m_recommendsCheckBox->isChecked());
     }
+
+    int autoCleanValue;
+
+    if (m_autoCleanCheckBox->isChecked()) {
+        autoCleanValue = m_autoCleanSpinbox->value();
+    } else {
+        autoCleanValue = 0;
+    }
+
+    if (m_aptConfig->readEntry("APT::Periodic::AutocleanInterval", 0) != autoCleanValue) {
+        m_aptConfig->writeEntry("APT::Periodic::AutocleanInterval", autoCleanValue);
+    }
 }
 
 void GeneralSettingsPage::restoreDefaults()
 {
     m_undoStackSpinbox->setValue(20);
+}
+
+void GeneralSettingsPage::updateAutoCleanSpinboxSuffix()
+{
+    m_autoCleanSpinbox->setSuffix(i18np(" day", " days", m_autoCleanSpinbox->value()));
 }
 
 #include "GeneralSettingsPage.moc"
